tests/neg/todo/simple/fun-02a.ts
/*@ baz :: () => number */
declare function baz (): number;

baz();

assert(false);
